logs/acplt_build-c46cab97ea-clang-linux32__FAIL__.log
make: Entering directory `/home/travis/build/acplt/rte/build/acplt.build/base/ov/source/libml'
clang -m32 -Wall -O2 -DML_SYSTEM_UNIX -DDBG_TO_STDERR=0 -fPIC  -I. -c ml_malloc.c
clang -m32 -Wall -O2 -DML_SYSTEM_UNIX -DDBG_TO_STDERR=0 -fPIC  -I. -c ml_free.c
clang -m32 -Wall -O2 -DML_SYSTEM_UNIX -DDBG_TO_STDERR=0 -fPIC  -I. -c ml_realloc.c
ar crv libml.a ml_malloc.o ml_free.o ml_realloc.o
a - ml_malloc.o
a - ml_free.o
a - ml_realloc.o
ranlib libml.a
make: Leaving directory `/home/travis/build/acplt/rte/build/acplt.build/base/ov/source/libml'
make: Entering directory `/home/travis/build/acplt/rte/build/acplt.build/base/ov/build/linux'
bison -t -d -oov_ovmparser.c ../../source/codegen/ov_ovmparser.y
clang -m32 -g -Wall -Winit-self -Wno-attributes -std=c99 -fno-strict-aliasing -fPIC -O0 -fvisibility=hidden   -DPLT_SYSTEM_LINUX=1 -DPLT_USE_BUFFERED_STREAMS=1 -DPLT_SERVER_TRUNC_ONLY=1 -DNDEBUG -DOV_DEBUG  -DOV_SYSTEM_LINUX=1    -I../../../plt/include/ -I../../../ks/include/ -I../../include/ -I../../model/ -I../../source/codegen/ -I../../source/builder/ -I../../source/example/ -I../../source/kshist/ -I../../source/dynov/ -I../../source/tasklib/ -I../../source/dbparse/ -I../../source/dbdump/ -I../../include/libml/ -I../../include/runtimeserver/ -I. -c ov_ovmparser.c -o ov_ovmparser.o
flex -oov_ovmscanner.c ../../source/codegen/ov_ovmscanner.lex
clang -m32 -g -Wall -Winit-self -Wno-attributes -std=c99 -fno-strict-aliasing -fPIC -O0 -fvisibility=hidden   -DPLT_SYSTEM_LINUX=1 -DPLT_USE_BUFFERED_STREAMS=1 -DPLT_SERVER_TRUNC_ONLY=1 -DNDEBUG -DOV_DEBUG  -DOV_SYSTEM_LINUX=1    -I../../../plt/include/ -I../../../ks/include/ -I../../include/ -I../../model/ -I../../source/codegen/ -I../../source/builder/ -I../../source/example/ -I../../source/kshist/ -I../../source/dynov/ -I../../source/tasklib/ -I../../source/dbparse/ -I../../source/dbdump/ -I../../include/libml/ -I../../include/runtimeserver/ -I. -c ov_ovmscanner.c -o ov_ovmscanner.o
ov_ovmscanner.c:2391:48: warning: implicit declaration of function 'fileno' is invalid in C99 [-Wimplicit-function-declaration]
        b->yy_is_interactive = file ? (isatty( fileno(file) ) > 0) : 0;
                                               ^
ov_ovmscanner.c:2143:17: warning: unused function 'yyunput' [-Wunused-function]
    static void yyunput (int c, register char * yy_bp )
                ^
ov_ovmscanner.c:2184:16: warning: function 'input' is not needed and will not be emitted [-Wunneeded-internal-declaration]
    static int input  (void)
               ^
3 warnings generated.
clang -m32 -g -Wall -Winit-self -Wno-attributes -std=c99 -fno-strict-aliasing -fPIC -O0 -fvisibility=hidden   -DPLT_SYSTEM_LINUX=1 -DPLT_USE_BUFFERED_STREAMS=1 -DPLT_SERVER_TRUNC_ONLY=1 -DNDEBUG -DOV_DEBUG  -DOV_SYSTEM_LINUX=1    -I../../../plt/include/ -I../../../ks/include/ -I../../include/ -I../../model/ -I../../source/codegen/ -I../../source/builder/ -I../../source/example/ -I../../source/kshist/ -I../../source/dynov/ -I../../source/tasklib/ -I../../source/dbparse/ -I../../source/dbdump/ -I../../include/libml/ -I../../include/runtimeserver/ -I. -c ../../source/codegen/ov_codegen.c -o ov_codegen.o
clang -m32  -o ov_codegen ov_ovmparser.o ov_ovmscanner.o ov_codegen.o  -ldl
strip --strip-debug ov_codegen
./ov_codegen -I ../../model/ -f ../../model/ov.ovm -l ov
clang -m32 -g -Wall -Winit-self -Wno-attributes -std=c99 -fno-strict-aliasing -fPIC -O0 -fvisibility=hidden   -DPLT_SYSTEM_LINUX=1 -DPLT_USE_BUFFERED_STREAMS=1 -DPLT_SERVER_TRUNC_ONLY=1 -DNDEBUG -DOV_DEBUG  -DOV_SYSTEM_LINUX=1    -I../../../plt/include/ -I../../../ks/include/ -I../../include/ -I../../model/ -I../../source/codegen/ -I../../source/builder/ -I../../source/example/ -I../../source/kshist/ -I../../source/dynov/ -I../../source/tasklib/ -I../../source/dbparse/ -I../../source/dbdump/ -I../../include/libml/ -I../../include/runtimeserver/ -I. -c ov.c -o ov.o
clang -m32 -g -Wall -Winit-self -Wno-attributes -std=c99 -fno-strict-aliasing -fPIC -O0 -fvisibility=hidden   -DPLT_SYSTEM_LINUX=1 -DPLT_USE_BUFFERED_STREAMS=1 -DPLT_SERVER_TRUNC_ONLY=1 -DNDEBUG -DOV_DEBUG  -DOV_SYSTEM_LINUX=1    -I../../../plt/include/ -I../../../ks/include/ -I../../include/ -I../../model/ -I../../source/codegen/ -I../../source/builder/ -I../../source/example/ -I../../source/kshist/ -I../../source/dynov/ -I../../source/tasklib/ -I../../source/dbparse/ -I../../source/dbdump/ -I../../include/libml/ -I../../include/runtimeserver/ -I. -c ../../source/libov/ov_association.c -o ov_association.o
clang -m32 -g -Wall -Winit-self -Wno-attributes -std=c99 -fno-strict-aliasing -fPIC -O0 -fvisibility=hidden   -DPLT_SYSTEM_LINUX=1 -DPLT_USE_BUFFERED_STREAMS=1 -DPLT_SERVER_TRUNC_ONLY=1 -DNDEBUG -DOV_DEBUG  -DOV_SYSTEM_LINUX=1    -I../../../plt/include/ -I../../../ks/include/ -I../../include/ -I../../model/ -I../../source/codegen/ -I../../source/builder/ -I../../source/example/ -I../../source/kshist/ -I../../source/dynov/ -I../../source/tasklib/ -I../../source/dbparse/ -I../../source/dbdump/ -I../../include/libml/ -I../../include/runtimeserver/ -I. -c ../../source/libov/ov_childrelationship.c -o ov_childrelationship.o
clang -m32 -g -Wall -Winit-self -Wno-attributes -std=c99 -fno-strict-aliasing -fPIC -O0 -fvisibility=hidden   -DPLT_SYSTEM_LINUX=1 -DPLT_USE_BUFFERED_STREAMS=1 -DPLT_SERVER_TRUNC_ONLY=1 -DNDEBUG -DOV_DEBUG  -DOV_SYSTEM_LINUX=1    -I../../../plt/include/ -I../../../ks/include/ -I../../include/ -I../../model/ -I../../source/codegen/ -I../../source/builder/ -I../../source/example/ -I../../source/kshist/ -I../../source/dynov/ -I../../source/tasklib/ -I../../source/dbparse/ -I../../source/dbdump/ -I../../include/libml/ -I../../include/runtimeserver/ -I. -c ../../source/libov/ov_class.c -o ov_class.o
../../source/libov/ov_class.c:76:10: warning: implicit declaration of function 'strdup' is invalid in C99 [-Wimplicit-function-declaration]
        libid = Ov_HeapStrdup(identifier);
                ^
../../include/libov/ov_macros.h:599:28: note: expanded from macro 'Ov_HeapStrdup'
#define Ov_HeapStrdup(ptr)      strdup(ptr)
                                ^
../../source/libov/ov_class.c:76:8: warning: incompatible integer to pointer conversion assigning to 'OV_STRING' (aka 'char *') from 'int' [-Wint-conversion]
        libid = Ov_HeapStrdup(identifier);
              ^ ~~~~~~~~~~~~~~~~~~~~~~~~~
2 warnings generated.
clang -m32 -g -Wall -Winit-self -Wno-attributes -std=c99 -fno-strict-aliasing -fPIC -O0 -fvisibility=hidden   -DPLT_SYSTEM_LINUX=1 -DPLT_USE_BUFFERED_STREAMS=1 -DPLT_SERVER_TRUNC_ONLY=1 -DNDEBUG -DOV_DEBUG  -DOV_SYSTEM_LINUX=1    -I../../../plt/include/ -I../../../ks/include/ -I../../include/ -I../../model/ -I../../source/codegen/ -I../../source/builder/ -I../../source/example/ -I../../source/kshist/ -I../../source/dynov/ -I../../source/tasklib/ -I../../source/dbparse/ -I../../source/dbdump/ -I../../include/libml/ -I../../include/runtimeserver/ -I. -c ../../source/libov/ov_construction.c -o ov_construction.o
clang -m32 -g -Wall -Winit-self -Wno-attributes -std=c99 -fno-strict-aliasing -fPIC -O0 -fvisibility=hidden   -DPLT_SYSTEM_LINUX=1 -DPLT_USE_BUFFERED_STREAMS=1 -DPLT_SERVER_TRUNC_ONLY=1 -DNDEBUG -DOV_DEBUG  -DOV_SYSTEM_LINUX=1    -I../../../plt/include/ -I../../../ks/include/ -I../../include/ -I../../model/ -I../../source/codegen/ -I../../source/builder/ -I../../source/example/ -I../../source/kshist/ -I../../source/dynov/ -I../../source/tasklib/ -I../../source/dbparse/ -I../../source/dbdump/ -I../../include/libml/ -I../../include/runtimeserver/ -I. -c ../../source/libov/ov_containment.c -o ov_containment.o
clang -m32 -g -Wall -Winit-self -Wno-attributes -std=c99 -fno-strict-aliasing -fPIC -O0 -fvisibility=hidden   -DPLT_SYSTEM_LINUX=1 -DPLT_USE_BUFFERED_STREAMS=1 -DPLT_SERVER_TRUNC_ONLY=1 -DNDEBUG -DOV_DEBUG  -DOV_SYSTEM_LINUX=1    -I../../../plt/include/ -I../../../ks/include/ -I../../include/ -I../../model/ -I../../source/codegen/ -I../../source/builder/ -I../../source/example/ -I../../source/kshist/ -I../../source/dynov/ -I../../source/tasklib/ -I../../source/dbparse/ -I../../source/dbdump/ -I../../include/libml/ -I../../include/runtimeserver/ -I. -c ../../source/libov/ov_database.c -o ov_database.o
../../source/libov/ov_database.c:652:32: error: expected ')'
        if(!size || (size > (OV_UINT) OV_DATABASE_MAXSIZE) || !filename) {
                                      ^
../../include/libov/ov_database.h:43:42: note: expanded from macro 'OV_DATABASE_MAXSIZE'
 #define OV_DATABASE_MAXSIZE    2147483648  2 GByte 
                                            ^
../../source/libov/ov_database.c:652:14: note: to match this '('
        if(!size || (size > (OV_UINT) OV_DATABASE_MAXSIZE) || !filename) {
                    ^
1 error generated.
make: *** [ov_database.o] Error 1
make: Leaving directory `/home/travis/build/acplt/rte/build/acplt.build/base/ov/build/linux'
